chore: Misc design and features (#81)
* remove catfetcher.js RIP

* add a backgorund dropdown to each scenario card

* Add option to add pretty names for products.

* Fix margins in the sidemenu

* Latest searchquery is not the placeholder in the searchbox

* Localized the /search page

* re-added the list style to feature description. Moved the background to come after the feature description to remove confusion

* remove margin left for dropdown menu items

* Features without rules now correctly display the a summary of its scenarios statuses

* Added total scenario count to analytics page. Localized Analytics.cshtml

--- a/source/VizGurka/Pages/Features/Features.cshtml
+++ b/source/VizGurka/Pages/Features/Features.cshtml
@@ -1,8 +1,7 @@
 @page "/features/{productName}/{id:guid}/{featureId:guid?}/{rule?}"
-@model VizGurka.Pages.Features.FeaturesModel
 @using Microsoft.Extensions.Localization
-@using System.Globalization
-@using VizGurka.Models;
+@using VizGurka.Models
+@model FeaturesModel
 @inject IStringLocalizer<FeaturesModel> Localizer
 @{
     Layout = "~/Pages/Shared/_FeaturesLayout.cshtml";
@@ -61,7 +60,7 @@
                     <div class="title_and_link">
                         <h1 class="content_container_title id=" id="@Model.SelectedFeature.Name-title">
                             <img class="container_title_status_img"
-                                 src="~/icons/@(IconHelper.GetStatusIcon(@Model.SelectedFeature.Status)).svg"
+                                 src="~/icons/@(IconHelper.GetStatusIcon(Model.SelectedFeature.Status)).svg"
                                  alt="status icon"/>
                             @Model.SelectedFeature.Name
                             @if (Model.SelectedFeature.FilePath != null && baseUrl.Contains("github"))
@@ -101,7 +100,7 @@
                             </ul>
                         }
 
-                        @if (Model.SelectedFeature.Rules.Any())
+                        @if (Model.SelectedFeature.Rules != null && Model.SelectedFeature.Rules.Any())
                         {
                             <div class="rule-status-summary">
                                 <h3>@Localizer["Rules:"]</h3>
@@ -121,29 +120,50 @@
                                 </ul>
                             </div>
                         }
-                    </div>
-                    <div class="background">
-                        @if (@Model.SelectedFeature.Background?.Steps != null)
+                        else if (Model.SelectedFeature.Scenarios != null && Model.SelectedFeature.Scenarios.Any())
                         {
-                            <div class="content_container_description">
-                                <h2>@Localizer["Background:"]</h2>
-                                @foreach (var step in Model.SelectedFeature.Background?.Steps)
-                                {
-                                    <div class="background_scenario_step">
-                                        <strong>@step.Kind</strong> @step.Text
-                                        @if (step.Table != null)
-                                        {
-                                            <div class="container_scenario_table">
-                                                @Model.MarkdownStringToHtml(step.Table ?? "")
-                                            </div>
-                                        }
-                                    </div>
-                                }
+                            <div class="rule-status-summary">
+                                <h3>@Localizer["Scenarios:"]</h3>
+                                <ul class="status-counts">
+                                    <li>
+                                        <img src="~/icons/passed.svg" alt="Passed Scenario icon"/>
+                                        <h3>@Model.ScenarioPassedCount</h3>
+                                    </li>
+                                    <li>
+                                        <img src="~/icons/pending.svg" alt="Not Implemented Scenario icon"/>
+                                        <h3>@Model.ScenarioNotImplementedCount</h3>
+                                    </li>
+                                    <li>
+                                        <img src="~/icons/failed.svg" alt="Failed Scenario icon"/>
+                                        <h3>@Model.ScenarioFailedCount</h3>
+                                    </li>
+                                </ul>
                             </div>
                         }
                     </div>
+
                     <div class="content_container_description">
-                        @Model.MarkdownStringToHtml(@Model.SelectedFeature.Description ?? string.Empty)</div>
+                        @Model.MarkdownStringToHtml(Model.SelectedFeature.Description ?? string.Empty)</div>
+                </div>
+                <div class="background">
+                    @if (Model.SelectedFeature.Background?.Steps != null)
+                    {
+                        <div class="content_container_description">
+                            <h2>@Localizer["Background:"]</h2>
+                            @foreach (var step in Model.SelectedFeature.Background?.Steps)
+                            {
+                                <div class="background_scenario_step">
+                                    <strong>@step.Kind</strong> @step.Text
+                                    @if (step.Table != null)
+                                    {
+                                        <div class="container_scenario_table">
+                                            @Model.MarkdownStringToHtml(step.Table ?? "")
+                                        </div>
+                                    }
+                                </div>
+                            }
+                        </div>
+                    }
                 </div>
                 <ul class="scenario_list">
                     @foreach (var scenario in Model.SelectedFeature.Scenarios)
@@ -177,6 +197,34 @@
 
                             <div class="scenario_rule_description scenario_description" id="scenario_rule_description">
                                 @Model.MarkdownStringToHtml(scenario.Description ?? string.Empty)
+                            </div>
+                            <div>
+                                @if (Model.SelectedFeature?.Background?.Steps != null && Model.SelectedFeature.Background.Steps.Any())
+                                {
+                                    var featureBackgroundId = $"feature_background_{Guid.NewGuid()}";
+                                    <div class="background_scenario">
+                                        <button type="button" class="dropdown-toggle-background"
+                                                data-target="@featureBackgroundId">
+                                            <strong>@Localizer["Show background"] <i
+                                                    class="fa fa-chevron-right"></i></strong>
+                                        </button>
+                                        <div id="@featureBackgroundId" class="dropdown-content-background"
+                                             style="display: none; margin-left: 1.5em;">
+                                            @foreach (var step in Model.SelectedFeature.Background.Steps)
+                                            {
+                                                <div class="background_scenario_step">
+                                                    <strong>@step.Kind</strong> @step.Text
+                                                    @if (step.Table != null)
+                                                    {
+                                                        <div class="container_scenario_table">
+                                                            @Model.MarkdownStringToHtml(step.Table ?? "")
+                                                        </div>
+                                                    }
+                                                </div>
+                                            }
+                                        </div>
+                                    </div>
+                                }
                             </div>
                             @foreach (var step in scenario.Steps)
                             {
@@ -277,7 +325,7 @@
                         <ul class="scenario_list">
                             @foreach (var scenario in rule.Scenarios)
                             {
-                                @if (scenario.IsOutlineChild == true)
+                                @if (scenario.IsOutlineChild)
                                 {
                                     continue;
                                 }
@@ -289,7 +337,7 @@
                                             <img class="container_scenario_status_img"
                                                  src="~/icons/@(IconHelper.GetStatusIcon(scenario.Status)).svg"
                                                  alt="status icon"/>
-                                            @if (scenario.IsOutline == true)
+                                            @if (scenario.IsOutline)
                                             {
                                                 <span>@Localizer["Scenario Outline: "]</span>
                                             }
@@ -322,6 +370,34 @@
                                          id="scenario_rule_description">
                                         @Model.MarkdownStringToHtml(scenario.Description ?? string.Empty)
                                     </div>
+
+                                    @if (Model.SelectedFeature?.Background?.Steps != null && Model.SelectedFeature.Background.Steps.Any())
+                                    {
+                                        var featureBackgroundId = $"feature_background_{Guid.NewGuid()}";
+                                        <div class="background_scenario">
+                                            <button type="button" class="dropdown-toggle-background"
+                                                    data-target="@featureBackgroundId">
+                                                <strong>@Localizer["Show background"] <i
+                                                        class="fa fa-chevron-right"></i></strong>
+                                            </button>
+                                            <div id="@featureBackgroundId" class="dropdown-content-background"
+                                                 style="display: none; margin-left: 1.5em;">
+                                                @foreach (var step in Model.SelectedFeature.Background.Steps)
+                                                {
+                                                    <div class="background_scenario_step">
+                                                        <strong>@step.Kind</strong> @step.Text
+                                                        @if (step.Table != null)
+                                                        {
+                                                            <div class="container_scenario_table">
+                                                                @Model.MarkdownStringToHtml(step.Table ?? "")
+                                                            </div>
+                                                        }
+                                                    </div>
+                                                }
+                                            </div>
+                                        </div>
+                                    }
+
                                     @foreach (var step in scenario.Steps)
                                     {
                                         <div class="container_scenario_step">
