Add filtering for draft features.
Add Status logic explanation in the README.md

--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
@@ -173,6 +173,7 @@
                 <button class="filter-option" data-filter="Passed">@Localizer["Passed"]</button>
                 <button class="filter-option" data-filter="NotImplemented">@Localizer["Skipped"]</button>
                 <button class="filter-option" data-filter="Failed">@Localizer["Failed"]</button>
+                <button class="filter-option" data-filter="Draft">@Localizer["Draft"]</button>
             </div>
         </div>
         @if (Model.FeatureTree != null && Model.FeatureTree.Any())
