--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
@@ -58,7 +58,15 @@
                 {
                     content.AppendHtml("<li>");
                     content.AppendHtml("<div class=\"feature-dropdown\">");
-                    content.AppendHtml($"<img class=\"status_img\" src=\"/icons/{IconHelper.GetStatusIcon(feature.Status)}.svg\" alt=\"status icon\" />");
+                    
+                    if(feature.Tags.Any(tag => tag == "@draft"))
+                    {
+                        content.AppendHtml($"<img class=\"status_img\" src=\"/icons/draft.svg\" alt=\"status icon\" />");
+                    }
+                    else
+                    {
+                        content.AppendHtml($"<img class=\"status_img\" src=\"/icons/{IconHelper.GetStatusIcon(feature.Status)}.svg\" alt=\"status icon\" />");
+                    }
                     content.AppendHtml($"<a class=\"feature_sidebar {(Context.Request.Path.ToString().Contains($"/features/{Model.ProductName}/{Model.Id}/{feature.Id}") ? "active_sidebar" : "")}\" href=\"/features/{Model.ProductName}/{Model.Id}/{feature.Id}\">{feature.Name}</a>");
                     content.AppendHtml("</div>");
                     content.AppendHtml("</li>");
@@ -165,6 +173,7 @@
                 <button class="filter-option" data-filter="Passed">@Localizer["Passed"]</button>
                 <button class="filter-option" data-filter="NotImplemented">@Localizer["Skipped"]</button>
                 <button class="filter-option" data-filter="Failed">@Localizer["Failed"]</button>
+                <button class="filter-option" data-filter="Draft">@Localizer["Draft"]</button>
             </div>
         </div>
         @if (Model.FeatureTree != null && Model.FeatureTree.Any())
